--- a/KimSuKiNaverAI/app/src/main/res/layout/activity_media_player.xml
+++ b/KimSuKiNaverAI/app/src/main/res/layout/activity_media_player.xml
@@ -6,109 +6,96 @@
     tools:context="com.example.kimsuki_naver_ai.URLMediaPlayerActivity">
 
 
-    <ImageView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:id="@+id/coverImage"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:scaleType="centerCrop"/>
-
-
     <RelativeLayout
-
+        android:id="@+id/linearLayout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:id="@+id/linearLayout"
+        android:alpha="0.7"
         android:background="#000000"
-        android:alpha="0.7">
+        android:orientation="vertical">
 
         <TextView
+            android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="Now playing:"
-            android:textSize="18sp"
-            android:textStyle="bold"
             android:textColor="#FFFFFF"
-            android:id="@+id/textView" />
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
         <TextView
             android:id="@+id/now_playing_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/textView"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
             android:layout_gravity="center"
             android:text="Now playing.."
-            android:textSize="16sp"
-            android:textStyle="italic"
             android:textColor="#FFFFFF"
-            android:layout_below="@+id/textView"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:textSize="16sp"
+            android:textStyle="italic" />
     </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#000000"
+        android:layout_alignTop="@+id/controls"
         android:alpha="0.7"
-        android:layout_alignTop="@+id/controls">
-    </LinearLayout>
+        android:background="#000000">
 
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/controls"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_centerHorizontal="true"
         android:layout_above="@+id/controls_bar"
+        android:layout_centerHorizontal="true"
+        android:orientation="horizontal"
         android:padding="5dp">
 
 
         <ImageButton
+            android:id="@+id/btn_backward"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Bw"
-            android:id="@+id/backward"
-            android:layout_toLeftOf="@+id/pause"
-            android:onClick="seekBackward"
+            android:layout_toLeftOf="@+id/btn_pause"
+            android:background="@null"
             android:src="@drawable/ic_audio_backward"
-            android:background="@null"/>
+            android:text="Bw" />
 
         <ImageButton
+            android:id="@+id/btn_pause"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Pause"
-            android:id="@+id/pause"
-            android:layout_toLeftOf="@+id/play"
-            android:onClick="pause"
-            android:src="@drawable/ic_audio_forward"
-            android:background="@null"/>
+            android:layout_toLeftOf="@+id/btn_play"
+            android:background="@null"
+            android:src="@drawable/ic_audio_pasue"
+            android:text="Pause" />
 
         <ImageButton
+            android:id="@+id/btn_play"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Play"
-            android:id="@+id/play"
             android:layout_centerHorizontal="true"
-            android:onClick="play"
+            android:background="@null"
             android:src="@drawable/ic_audio_play"
-            android:background="@null"/>
+            android:text="Play" />
 
         <ImageButton
+            android:id="@+id/btn_forward"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Fw"
-            android:id="@+id/forward"
-            android:layout_toRightOf="@+id/play"
-            android:onClick="seekForward"
+            android:layout_toRightOf="@+id/btn_play"
+            android:background="@null"
             android:src="@drawable/ic_audio_forward"
-            android:background="@null"/>
+            android:text="Fw" />
 
     </LinearLayout>
 
@@ -117,34 +104,34 @@
         android:id="@+id/controls_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_alignParentBottom="true">
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal">
 
 
         <TextView
+            android:id="@+id/currentTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/currentTime"
+            android:padding="5dp"
             android:text="00:00:00"
-            android:textColor="#FFFFFF"
-            android:padding="5dp"/>
+            android:textColor="#FFFFFF" />
 
         <SeekBar
+            android:id="@+id/seekBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/seekBar"
             android:layout_centerHorizontal="true"
+            android:layout_weight="1"
             android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:layout_weight="1"/>
+            android:paddingRight="15dp" />
 
         <TextView
+            android:id="@+id/totalTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/totalTime"
+            android:padding="5dp"
             android:text="00:00:00"
-            android:textColor="#FFFFFF"
-            android:padding="5dp"/>
+            android:textColor="#FFFFFF" />
 
     </LinearLayout>
 
