--- a/KimSuKiNaverAI/app/src/main/res/layout/activity_media_player.xml
+++ b/KimSuKiNaverAI/app/src/main/res/layout/activity_media_player.xml
@@ -36,6 +36,14 @@
             android:textColor="#FFFFFF"
             android:textSize="16sp"
             android:textStyle="italic" />
+
+        <Button
+            android:id="@+id/btn_upload"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_toRightOf="@+id/now_playing_text"
+            android:text="업로드" />
     </RelativeLayout>
 
     <LinearLayout
