--- a/KimSuKiNaverAI/app/src/main/res/layout/activity_media_player.xml
+++ b/KimSuKiNaverAI/app/src/main/res/layout/activity_media_player.xml
@@ -3,7 +3,7 @@
     android:id="@+id/main_audio_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.kimsuki_naver_ai.URLMediaPlayerActivity">
+    tools:context="com.example.kimsuki_naver_ai.Activity.URLMediaPlayerActivity">
 
 
     <RelativeLayout
