--- a/KimSuKiNaverAI/app/src/main/res/layout/activity_main.xml
+++ b/KimSuKiNaverAI/app/src/main/res/layout/activity_main.xml
@@ -139,7 +139,7 @@
             android:id="@+id/btn_finder"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="파일찾기" />
+            android:text="파일업로드" />
 
         <Button
             android:id="@+id/btn_recordStart"
