--- a/KimSuKiNaverAI/app/src/main/res/layout/activity_main.xml
+++ b/KimSuKiNaverAI/app/src/main/res/layout/activity_main.xml
@@ -8,25 +8,12 @@
     android:orientation="vertical"
     tools:context=".Activity.MainActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#181A2D"
-        android:gravity="right"
-        android:orientation="horizontal">
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="aioejf" />
-
-    </LinearLayout>
-
 
     <FrameLayout
+
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:background="#1A1C3A">
+        android:background="@drawable/background">
 
         <TextView
             android:layout_width="wrap_content"
@@ -46,7 +33,7 @@
 
         <HorizontalScrollView
             android:layout_width="match_parent"
-            android:layout_height="90dp"
+            android:layout_height="100dp"
             android:layout_gravity="bottom"
             android:layout_marginBottom="10dp"
             android:scrollbars="none">
@@ -114,10 +101,51 @@
 
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
-
         </HorizontalScrollView>
-
     </FrameLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#ffffff"
+        android:orientation="horizontal">
+
+        <Button
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:text="전체기록"
+            android:textStyle="bold" />
+
+        <Button
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="오늘"
+            android:textStyle="bold" />
+
+        <Button
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="중요기록"
+            android:textStyle="bold" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_weight="1" />
+
+        <ImageButton
+
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_search" />
+
+    </LinearLayout>
 
 
     <ListView
@@ -128,32 +156,119 @@
         android:background="#ffffff"
         tools:listitem="@layout/listview_item" />
 
-    <LinearLayout
 
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal">
+        android:layout_height="114dp">
 
-        <Button
-            android:id="@+id/btn_finder"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="파일업로드" />
-
-        <Button
-            android:id="@+id/btn_recordStart"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="녹음시작" />
-
-        <Button
-            android:id="@+id/btn_recordStop"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="녹음종료" />
+        <ImageButton
+            android:id="@+id/btn_record"
+            android:layout_width="73dp"
+            android:layout_height="73dp"
+            android:layout_gravity="center_horizontal"
+            android:background="#661A1A"
+            android:elevation="20dp" />
 
 
-    </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_gravity="bottom"
+            android:background="#ffffff"
+            android:elevation="10dp"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:id="@+id/btn_home"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="10dp">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_home" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="홈" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/btn_finder"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="10dp">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_upload" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="업로드" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="10dp" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="10dp">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_upload" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="일정" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="10dp">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_upload" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="설정" />
+
+            </LinearLayout>
+        </LinearLayout>
+
+    </FrameLayout>
 
 </LinearLayout>
