--- a/KimSuKiNaverAI/app/src/main/res/drawable/seek_thumb.xml
+++ b/KimSuKiNaverAI/app/src/main/res/drawable/seek_thumb.xml
@@ -3,5 +3,5 @@
     <size
         android:width="1dp"
         android:height="10dp" />
-    <solid android:color="#ffffff" />
+    <solid android:color="#3F9B5D" />
 </shape>
