--- a/KimSuKiNaverAI/app/src/main/res/layout/listview_item.xml
+++ b/KimSuKiNaverAI/app/src/main/res/layout/listview_item.xml
@@ -14,7 +14,7 @@
             android:layout_height="30dp"
             android:layout_gravity="center_vertical"
             android:layout_margin="10dp"
-            android:src="@drawable/ic_play" />
+            android:src="@drawable/ic_play_list" />
 
         <LinearLayout
             android:layout_width="0dp"
